fix: Use consistent locale for number formatting in JmhBenchmarkConverter
Fixed CI build failure caused by locale-dependent number formatting.
The formatScore() method was using String.formatted() which relies on
the default system locale, causing inconsistent output between:
- German locale (local dev): "2,1 ms/op" (comma as decimal separator)
- US locale (GitHub CI): "2.1 ms/op" (period as decimal separator)

Changed to explicitly use Locale.GERMAN to ensure consistent formatting
across all environments, matching the test expectations.

Fixes test failures in:
- shouldConvertLatencyBenchmarkWithMsPerOp
- shouldConvertThroughputBenchmarkWithOpsPerMs
- shouldHandleOpsPerSecondWithoutConversion

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>